[package]
name = "pumpchain-validator"
version = "0.1.0"
edition = "2021"
authors = ["PumpChain Team <team@pumpchain.io>"]
description = "PumpChain SVM-based validator node"
license = "MIT"
repository = "https://github.com/pump-chain/pumpchain-validator"

[dependencies]
# Core Solana/Agave dependencies
solana-sdk = "1.17"
solana-program = "1.17"
solana-runtime = "1.17"
solana-accounts-db = "1.17"
solana-svm = "1.17"

# Consensus
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "gossipsub"] }
hotstuff = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
tonic = "0.11"
prost = "0.12"
tower = "0.4"

# State management
rocksdb = "0.22"
hashbrown = "0.14"
patricia-merkle-trie = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# RPC
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"

# Encoding
bs58 = "0.5"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"

[[bin]]
name = "pumpchain-validator"
path = "src/main.rs"

[[bin]]
name = "pumpchain-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true