[package]
name = "pump-launchpad"
version = "0.1.0"
description = "Pump.fun bonding curve fork for PumpChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bytemuck = "1.14.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3